Fix some code style issues/warnings for Java 17