@@ -50,7 +50,7 @@ public class Queue extends BaseButton implements DQueue {
     @NotNull
     @Override
     public List<Player> getQueuedPlayers() {
-        return Collections.unmodifiableList(players.stream().sequential().map(QueueEntry::getPlayer).collect(Collectors.toList()));
+        return players.stream().sequential().map(QueueEntry::getPlayer).toList();
     }
 
     void addPlayer(final QueueEntry entry) {
